# pypackage-template

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  bootstrap.json  bootstrap.py  copier.yml  generate_new_project.ps1  generate_new_pypackage.ps1  pypeline.yaml  pyproject.toml
.github/workflows/: ci.yml
project/: .gitignore  .pre-commit-config.yaml  README.md.jinja  bootstrap.json  bootstrap.ps1  bootstrap.py  pyproject.toml.jinja  scoopfile.json  {{ package_name }}.ps1.jinja
project/.github/workflows/: ci.yml
project/docs/: conf.py.jinja  index.md.jinja  index.rst.jinja  installation.rst.jinja  project_info.rst.jinja  usage.rst.jinja
project/docs/about/: index.rst
project/docs/design/: index.rst.jinja
project/docs/design/figures/: design.mmd
project/docs/features/: index.md  index.rst
project/docs/getting_started/: concepts.rst  index.rst
project/docs/internals/: index.md.jinja  index.rst.jinja
project/docs/internals/figures/: design.mmd
project/src/{{package_name}}/: _run.py.jinja  main.py.jinja  my_app.py
project/tests/: test_main.py.jinja  test_my_app.py.jinja
tests/: test_generate_project.py
