 [tool.poetry]
name = "pypackage-template"
version = "0.1.0"
description = "A template for generating a Python package"
authors = ["Bruno Alla <alla.brunoo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
copier = "^9.0.0"
pytest = "^8.0.0"
pytest-cov = "^4.0"
black = "^23.1.0"
pre-commit = "^3.1.1"
pytest-mock = "^3.3"

[tool.isort]
profile = "black"
known_first_party = ["{{package_name}}", "hooks", "tests"]

[tool.pytest.ini_options]
addopts = "-v -Wdefault"
testpaths = "tests/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
